# opengeh-python-packages

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  README.md  pyproject.toml  t.py  tox.ini  trace
source/geh_common/: README.md  pyproject.toml  release-notes.md
source/geh_common/src/covernator_streamlit/: __init__.py  server.py  streamlit_app.py
source/geh_common/src/geh_common/application/: __init__.py  converters.py  retry_policy.py  settings.py
source/geh_common/src/geh_common/application/converters/: str_to_list.py
source/geh_common/src/geh_common/application/types/: connection_states.py  energy_supplier_ids.py  grid_area_codes.py  grid_area_ids.py  metering_point_ids.py  metering_point_types.py
source/geh_common/src/geh_common/covernator_streamlit/: __init__.py  models.py  server.py  streamlit_app.py  transformations.py
source/geh_common/src/geh_common/data_products/charges_wholesale/: charge_link_periods_v1.py  charge_price_information_periods_v1.py  charge_price_points_v1.py  wholesale_charge_link_periods_schema.py  wholesale_charge_price_information_periods_schema.py  wholesale_charge_price_points_schema.py
source/geh_common/src/geh_common/data_products/electricity_market_gold/: commercial_relations_v1.py  metering_point_periods_v1.py
source/geh_common/src/geh_common/data_products/electricity_market_measurements_input/: capacity_settlement_metering_point_periods_v1.py  electrical_heating_child_metering_points_v1.py  electrical_heating_consumption_metering_point_periods_v1.py  missing_measurements_log_metering_point_periods_v1.py  net_consumption_group_6_child_metering_points_v1.py  net_consumption_group_6_consumption_metering_point_periods_v1.py
source/geh_common/src/geh_common/data_products/electricity_market_reports_input/: measurement_report_metering_point_periods_v1.py  measurements_report_metering_point_periods_v1.py
source/geh_common/src/geh_common/data_products/measurements_calculated/: calculated_measurements_including_test_data_v1.py  calculated_measurements_v1.py  hourly_calculated_measurements_v1.py  missing_measurements_log_including_test_data_v1.py  missing_measurements_log_v1.py
source/geh_common/src/geh_common/databricks/: __init__.py  databricks_api_client.py  get_dbutils.py
source/geh_common/src/geh_common/databricks/optimizations/: analyze.py  optimize.py  vacuum.py
source/geh_common/src/geh_common/domain/types/: __init__.py  aggregated_resolution.py  asset_type.py  charge_resolution.py  connection_state.py  connection_type.py  disconnection_type.py  energy_unit.py  metering_point_resolution.py  metering_point_sub_type.py  metering_point_type.py  orchestration_type.py  product.py  quantity_unit.py  relation_type.py  settlement_group.py  settlement_method.py  time_resolution.py
source/geh_common/src/geh_common/infrastructure/: create_zip.py  current_measurements_repository.py  write_csv.py
source/geh_common/src/geh_common/infrastructure/model/: current_measurements.py  current_measurements_column_names.py  measurements_zorder_column_names.py
source/geh_common/src/geh_common/migrations/: __init__.py
source/geh_common/src/geh_common/migrations/constants/: migrations_constants.py
source/geh_common/src/geh_common/migrations/infrastructure/: apply_migration_scripts.py
source/geh_common/src/geh_common/migrations/models/: spark_sql_migrations_configuration.py  table_version.py
source/geh_common/src/geh_common/pyspark/: clamp.py  data_frame_wrapper.py  read_csv_test.py  transformations.py
source/geh_common/src/geh_common/pyspark/streaming/: read_stream.py  streaming_settings.py  write_stream.py
source/geh_common/src/geh_common/tasks/: TaskBase.py  ZipTask.py
source/geh_common/src/geh_common/telemetry/: __init__.py  decorators.py  logger.py  logging_configuration.py  span_recording.py
source/geh_common/src/geh_common/testing/container_test/: __init__.py  databricks_api_client.py
source/geh_common/src/geh_common/testing/covernator/: CovernatorTest.ps1  TestCases.py  __init__.py  commands.py  covernator_documentation.md  entrypoints.py  markdown_generator.py  models.py  row_types.py  serve_streamlit.py  setup_convernator_env.ps1  v1.py  v2.py  verify_covernator_env.ps1
source/geh_common/src/geh_common/testing/dataframes/: __init__.py  assert_dataframes.py  assert_schemas.py  assert_table.py  logging.py  read_csv.py  write_to_delta.py
source/geh_common/src/geh_common/testing/delta_lake/: __init__.py  delta_lake_operations.py
source/geh_common/src/geh_common/testing/job/: project_script.py
source/geh_common/src/geh_common/testing/scenario_testing/: TestCases.py  __init__.py
source/geh_common/src/geh_common/testing/spark/: mocks.py  spark_test_session.py
source/geh_common/tests/: conftest.py  constants.py
source/geh_common/tests/application/: test_retry_policy.py  test_settings.py
source/geh_common/tests/application/types/: test_connection_states.py  test_energy_supplier_ids.py  test_grid_area_codes.py  test_grid_area_ids.py  test_metering_point_ids.py  test_metering_point_types.py
source/geh_common/tests/databricks/: test_databricks_api_client.py
source/geh_common/tests/databricks/integration/: test_databricks_api_client.py  test_integration_databricks_api_client.py
source/geh_common/tests/infrastructure/: test_create_zip_file.py  test_current_measurements_repository.py  test_write_csv.py
source/geh_common/tests/migrations/: __init__.py
source/geh_common/tests/migrations/unit/: conftest.py  constants.py  test_schema_migration_pipeline.py
source/geh_common/tests/pyspark/: __init__.py
source/geh_common/tests/pyspark/unit/: test_clamp.py  test_data_frame_wrapper.py  test_main.py  test_read_csv.py
source/geh_common/tests/tasks/: test_zip_task.py
source/geh_common/tests/telemetry/: __init__.py  conftest.py
source/geh_common/tests/telemetry/integration/: conftest.py  test_integration_azure_monitor.py
source/geh_common/tests/telemetry/unit/: conftest.py  test_decorators.py  test_logger.py  test_logging_configuration.py
source/geh_common/tests/testing/: __init__.py
(+528 files in other folders)
