[project]
name = "opengeh-utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jpm@halfspace.io" }
]
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5.0",
    "delta-spark>=3.1,<4.0",
    "dependency_injector>=4.43.0,<5.0",
    "azure-monitor-opentelemetry>=1.6.0,<2.0.0",
    "azure-core>=1.30.0,<2.0.0",
    "azure-identity>=1.12.0,<2.0.0",
    "azure-keyvault-secrets>=4.7.0,<5.0.0",
    "azure-monitor-query>=1.2.0,<2.0.0",
    "pyyaml>=6.0.2",
    "databricks-sdk>=0.42.0",
]

[project.scripts]
opengeh-utilities = "opengeh_utilities:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]
