[project]
name = "module"
version = "0.1.0"

[project.scripts]
func = "tests.testing.unit.job.test_cases.case_succeed.module:func"

[dependency-groups]
dev = [
  "ruff>=0.9.4",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.1",
  "ruff>=0.9.4",
]

[tool.pytest.ini_options]
# -s ensures that print("<text>") is written to output.
addopts = [
  "--cov-report=term",
  "--cov-report=xml:coverage.xml",
  "--cov=geh_common",
  "-ra",                           # Show extra test summary info as specified by -ra
  "-vv",                           # Verbose output for tests
  "-s",                            # Print to console
  "-n=logical",                    # Run tests in parallel
  "--dist=worksteal",              # Pop tests off the queue in chunks
]
cache_dir = ".cache/pytest"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "D401", "E", "F", "I", "T201", "UP"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D106",
  "D107",
  "D417",
  "E501",
  "UP006",
  "UP007",
  "UP035",
]
exclude = ["notebooks/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
